Improve UX for huge text values

--- a/app/Resources/public/less/etraxis-controls.less
+++ b/app/Resources/public/less/etraxis-controls.less
@@ -79,6 +79,10 @@ legend,
 .value {
     overflow-x: auto;
     word-break: break-word;
+
+    &.huge {
+        padding: 10px;
+    }
 }
 
 p.field-error {
