--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -46,6 +46,11 @@ p a {
     }
 }
 
+.value.huge {
+    background-color: #fffcf8;
+    border: 1px solid palegoldenrod;
+}
+
 /* DataTables */
 
 table.dataTable {
