--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -46,6 +46,11 @@ p a {
     }
 }
 
+.value.huge {
+    background-color: #fbfbfb;
+    border: 1px solid whitesmoke;
+}
+
 /* DataTables */
 
 table.dataTable {
