--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -67,6 +67,11 @@ p a {
     }
 }
 
+.value.huge {
+    background-color: #222;
+    border: 1px solid #333;
+}
+
 /* DataTables */
 
 table.dataTable {
