--- a/app/Resources/public/less/themes/theme-emerald.less
+++ b/app/Resources/public/less/themes/theme-emerald.less
@@ -46,6 +46,11 @@ p a {
     }
 }
 
+.value.huge {
+    background-color: whitesmoke;
+    border: 1px solid gainsboro;
+}
+
 /* DataTables */
 
 table.dataTable {
