--- a/app/Resources/views/admin/base.html.twig
+++ b/app/Resources/views/admin/base.html.twig
@@ -4,5 +4,6 @@
 
     <a href="{{ path('admin_users') }}">{{ 'users'|trans }}</a>
     <a href="{{ path('admin_projects') }}">{{ 'projects'|trans }}</a>
+    <a href="{{ path('homepage') }}">{{ 'button.back'|trans }}</a>
 
 {% endblock %}
