Update jQuery UI themes

--- a/app/Resources/public/css/emerald/jquery-ui.theme.css
+++ b/app/Resources/public/css/emerald/jquery-ui.theme.css
@@ -1,5 +1,5 @@
 /*!
- * jQuery UI CSS Framework 1.11.4
+ * jQuery UI CSS Framework 1.12.0
  * http://jqueryui.com
  *
  * Copyright jQuery Foundation and other contributors
@@ -8,7 +8,7 @@
  *
  * http://api.jqueryui.com/category/theming/
  *
- * To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Verdana%2C%20Geneva%2C%20sans-serif&fsDefault=1em&fwDefault=normal&cornerRadius=4px&bgColorHeader=%23404040&bgTextureHeader=highlight_soft&borderColorHeader=%23303030&fcHeader=%23fbfbfb&iconColorHeader=%23fbfbfb&bgColorContent=%23fbfbfb&bgTextureContent=flat&borderColorContent=%23c0c0c0&fcContent=%23404040&iconColorContent=%23404040&bgColorDefault=%2300605d&bgTextureDefault=gloss_wave&borderColorDefault=%2300413f&fcDefault=%23d0d0d0&iconColorDefault=%23d0d0d0&bgColorHover=%2377a69f&bgTextureHover=highlight_soft&borderColorHover=%23408277&fcHover=%23fbfbfb&iconColorHover=%23fbfbfb&bgColorActive=%2377a69f&bgTextureActive=highlight_hard&borderColorActive=%23408277&fcActive=%23fbfbfb&iconColorActive=%23fbfbfb&bgColorHighlight=%23ecf1fe&bgTextureHighlight=flat&borderColorHighlight=%23408277&fcHighlight=%23404040&iconColorHighlight=%2300605d&bgColorError=%23fef1ec&bgTextureError=flat&borderColorError=%23cd0a0a&fcError=%23cd0a0a&iconColorError=%23cd0a0a&bgColorOverlay=%23404040&bgTextureOverlay=flat&bgImgOpacityOverlay=10&opacityOverlay=40&bgColorShadow=%23404040&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=8px&offsetTopShadow=-8px&offsetLeftShadow=-8px&cornerRadiusShadow=4px&bgImgOpacityHeader=20&bgImgOpacityContent=100&bgImgOpacityDefault=25&bgImgOpacityHover=25&bgImgOpacityActive=25&bgImgOpacityHighlight=100&bgImgOpacityError=100&ctl=themeroller
+ * To view and modify this theme, visit http://jqueryui.com/themeroller/?scope=&folderName=custom-theme&ctl=themeroller&bgImgOpacityError=100&bgImgOpacityHighlight=100&bgImgOpacityActive=25&bgImgOpacityHover=25&bgImgOpacityDefault=25&bgImgOpacityContent=100&bgImgOpacityHeader=20&cornerRadiusShadow=4px&offsetLeftShadow=-8px&offsetTopShadow=-8px&thicknessShadow=8px&opacityShadow=30&bgImgOpacityShadow=0&bgTextureShadow=flat&bgColorShadow=%23404040&opacityOverlay=40&bgImgOpacityOverlay=10&bgTextureOverlay=flat&bgColorOverlay=%23404040&iconColorError=%23cd0a0a&fcError=%23cd0a0a&borderColorError=%23cd0a0a&bgTextureError=flat&bgColorError=%23fef1ec&iconColorHighlight=%2300605d&fcHighlight=%23404040&borderColorHighlight=%23408277&bgTextureHighlight=flat&bgColorHighlight=%23ecf1fe&iconColorActive=%23fbfbfb&fcActive=%23fbfbfb&borderColorActive=%23408277&bgTextureActive=highlight_hard&bgColorActive=%2377a69f&iconColorHover=%23fbfbfb&fcHover=%23fbfbfb&borderColorHover=%23408277&bgTextureHover=highlight_soft&bgColorHover=%2377a69f&iconColorDefault=%23d0d0d0&fcDefault=%23d0d0d0&borderColorDefault=%2300413f&bgTextureDefault=gloss_wave&bgColorDefault=%2300605d&iconColorContent=%23404040&fcContent=%23404040&borderColorContent=%23c0c0c0&bgTextureContent=flat&bgColorContent=%23fbfbfb&iconColorHeader=%23fbfbfb&fcHeader=%23fbfbfb&borderColorHeader=%23303030&bgTextureHeader=highlight_soft&bgColorHeader=%23404040&cornerRadius=4px&fwDefault=normal&fsDefault=1em&ffDefault=Verdana%2C%20Geneva%2C%20sans-serif
  */
 
 
@@ -27,6 +27,9 @@
 .ui-widget button {
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 1em;
+}
+.ui-widget.ui-widget-content {
+	border: 1px solid #00413f;
 }
 .ui-widget-content {
 	border: 1px solid #c0c0c0;
@@ -50,7 +53,13 @@
 ----------------------------------*/
 .ui-state-default,
 .ui-widget-content .ui-state-default,
-.ui-widget-header .ui-state-default {
+.ui-widget-header .ui-state-default,
+.ui-button,
+
+/* We use html here because we need a greater specificity to make sure disabled
+works properly when clicked or hovered */
+html .ui-button.ui-state-disabled:hover,
+html .ui-button.ui-state-disabled:active {
 	border: 1px solid #00413f;
 	background: #00605d url("images/ui-bg_gloss-wave_25_00605d_500x100.png") 50% 50% repeat-x;
 	font-weight: normal;
@@ -58,7 +67,11 @@
 }
 .ui-state-default a,
 .ui-state-default a:link,
-.ui-state-default a:visited {
+.ui-state-default a:visited,
+a.ui-button,
+a:link.ui-button,
+a:visited.ui-button,
+.ui-button {
 	color: #d0d0d0;
 	text-decoration: none;
 }
@@ -67,7 +80,9 @@
 .ui-widget-header .ui-state-hover,
 .ui-state-focus,
 .ui-widget-content .ui-state-focus,
-.ui-widget-header .ui-state-focus {
+.ui-widget-header .ui-state-focus,
+.ui-button:hover,
+.ui-button:focus {
 	border: 1px solid #408277;
 	background: #77a69f url("images/ui-bg_highlight-soft_25_77a69f_1x100.png") 50% 50% repeat-x;
 	font-weight: normal;
@@ -80,17 +95,31 @@
 .ui-state-focus a,
 .ui-state-focus a:hover,
 .ui-state-focus a:link,
-.ui-state-focus a:visited {
+.ui-state-focus a:visited,
+a.ui-button:hover,
+a.ui-button:focus {
 	color: #fbfbfb;
 	text-decoration: none;
 }
+
+.ui-visual-focus {
+	box-shadow: 0 0 3px 1px rgb(94, 158, 214);
+}
 .ui-state-active,
 .ui-widget-content .ui-state-active,
-.ui-widget-header .ui-state-active {
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
 	border: 1px solid #408277;
 	background: #77a69f url("images/ui-bg_highlight-hard_25_77a69f_1x100.png") 50% 50% repeat-x;
 	font-weight: normal;
 	color: #fbfbfb;
+}
+.ui-icon-background,
+.ui-state-active .ui-icon-background {
+	border: #408277;
+	background-color: #fbfbfb;
 }
 .ui-state-active a,
 .ui-state-active a:link,
@@ -107,6 +136,10 @@
 	border: 1px solid #408277;
 	background: #ecf1fe;
 	color: #404040;
+}
+.ui-state-checked {
+	border: 1px solid #408277;
+	background: #ecf1fe;
 }
 .ui-state-highlight a,
 .ui-widget-content .ui-state-highlight a,
@@ -168,17 +201,22 @@
 .ui-widget-header .ui-icon {
 	background-image: url("images/ui-icons_fbfbfb_256x240.png");
 }
-.ui-state-default .ui-icon {
+.ui-button .ui-icon {
 	background-image: url("images/ui-icons_d0d0d0_256x240.png");
 }
 .ui-state-hover .ui-icon,
-.ui-state-focus .ui-icon {
+.ui-state-focus .ui-icon,
+.ui-button:hover .ui-icon,
+.ui-button:focus .ui-icon,
+.ui-state-default .ui-icon {
 	background-image: url("images/ui-icons_fbfbfb_256x240.png");
 }
-.ui-state-active .ui-icon {
+.ui-state-active .ui-icon,
+.ui-button:active .ui-icon {
 	background-image: url("images/ui-icons_fbfbfb_256x240.png");
 }
-.ui-state-highlight .ui-icon {
+.ui-state-highlight .ui-icon,
+.ui-button .ui-state-highlight.ui-icon {
 	background-image: url("images/ui-icons_00605d_256x240.png");
 }
 .ui-state-error .ui-icon,
@@ -188,21 +226,21 @@
 
 /* positioning */
 .ui-icon-blank { background-position: 16px 16px; }
-.ui-icon-carat-1-n { background-position: 0 0; }
-.ui-icon-carat-1-ne { background-position: -16px 0; }
-.ui-icon-carat-1-e { background-position: -32px 0; }
-.ui-icon-carat-1-se { background-position: -48px 0; }
-.ui-icon-carat-1-s { background-position: -64px 0; }
-.ui-icon-carat-1-sw { background-position: -80px 0; }
-.ui-icon-carat-1-w { background-position: -96px 0; }
-.ui-icon-carat-1-nw { background-position: -112px 0; }
-.ui-icon-carat-2-n-s { background-position: -128px 0; }
-.ui-icon-carat-2-e-w { background-position: -144px 0; }
+.ui-icon-caret-1-n { background-position: 0 0; }
+.ui-icon-caret-1-ne { background-position: -16px 0; }
+.ui-icon-caret-1-e { background-position: -32px 0; }
+.ui-icon-caret-1-se { background-position: -48px 0; }
+.ui-icon-caret-1-s { background-position: -65px 0; }
+.ui-icon-caret-1-sw { background-position: -80px 0; }
+.ui-icon-caret-1-w { background-position: -96px 0; }
+.ui-icon-caret-1-nw { background-position: -112px 0; }
+.ui-icon-caret-2-n-s { background-position: -128px 0; }
+.ui-icon-caret-2-e-w { background-position: -144px 0; }
 .ui-icon-triangle-1-n { background-position: 0 -16px; }
 .ui-icon-triangle-1-ne { background-position: -16px -16px; }
 .ui-icon-triangle-1-e { background-position: -32px -16px; }
 .ui-icon-triangle-1-se { background-position: -48px -16px; }
-.ui-icon-triangle-1-s { background-position: -64px -16px; }
+.ui-icon-triangle-1-s { background-position: -65px -16px; }
 .ui-icon-triangle-1-sw { background-position: -80px -16px; }
 .ui-icon-triangle-1-w { background-position: -96px -16px; }
 .ui-icon-triangle-1-nw { background-position: -112px -16px; }
@@ -212,7 +250,7 @@
 .ui-icon-arrow-1-ne { background-position: -16px -32px; }
 .ui-icon-arrow-1-e { background-position: -32px -32px; }
 .ui-icon-arrow-1-se { background-position: -48px -32px; }
-.ui-icon-arrow-1-s { background-position: -64px -32px; }
+.ui-icon-arrow-1-s { background-position: -65px -32px; }
 .ui-icon-arrow-1-sw { background-position: -80px -32px; }
 .ui-icon-arrow-1-w { background-position: -96px -32px; }
 .ui-icon-arrow-1-nw { background-position: -112px -32px; }
@@ -224,7 +262,7 @@
 .ui-icon-arrowstop-1-e { background-position: -208px -32px; }
 .ui-icon-arrowstop-1-s { background-position: -224px -32px; }
 .ui-icon-arrowstop-1-w { background-position: -240px -32px; }
-.ui-icon-arrowthick-1-n { background-position: 0 -48px; }
+.ui-icon-arrowthick-1-n { background-position: 1px -48px; }
 .ui-icon-arrowthick-1-ne { background-position: -16px -48px; }
 .ui-icon-arrowthick-1-e { background-position: -32px -48px; }
 .ui-icon-arrowthick-1-se { background-position: -48px -48px; }
@@ -401,10 +439,6 @@
 	filter: Alpha(Opacity=40); /* support: IE8 */
 }
 .ui-widget-shadow {
-	margin: -8px 0 0 -8px;
-	padding: 8px;
-	background: #404040;
-	opacity: .3;
-	filter: Alpha(Opacity=30); /* support: IE8 */
-	border-radius: 4px;
+	-webkit-box-shadow: -8px -8px 8px #404040;
+	box-shadow: -8px -8px 8px #404040;
 }
