--- a/app/Resources/views/web/records/tab_history.html.twig
+++ b/app/Resources/views/web/records/tab_history.html.twig
@@ -1,4 +1,4 @@
-{% set showPrivate = is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENTS'), record) %}
+{% set showPrivate = is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENT'), record) %}
 
 <div class="grid-100 grid-row">
     <table id="history" class="cell-border">
