--- a/app/Resources/views/web/records/_comments.html.twig
+++ b/app/Resources/views/web/records/_comments.html.twig
@@ -1,4 +1,4 @@
-{% set showPrivate = is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENTS'), record) %}
+{% set showPrivate = is_granted(constant('eTraxis\\Voter\\RecordVoter::PRIVATE_COMMENT'), record) %}
 
 {% for comment in record.comments(showPrivate) %}
     <div class="grid-100 grid-parent grid-row">
