--- a/app/Resources/views/web/records/_attachments.html.twig
+++ b/app/Resources/views/web/records/_attachments.html.twig
@@ -5,9 +5,12 @@
         <div class="legend">{{ 'files'|trans }} ({{ attachments|length }})</div>
         {% for attachment in attachments %}
             <div class="grid-100 grid-row">
-                <img class="left" width="48" height="48" src="{{ asset('images/mimetypes/' ~ attachment.mimeImage) }}">
+                <a href="{{ path('web_download_attachment', { 'id': attachment.id }) }}" target="_blank">
+                    <img class="left" width="48" height="48" src="{{ asset('images/mimetypes/' ~ attachment.mimeImage) }}">
+                </a>
                 <p class="attachment-name">
-                    {{ attachment.name ~ ' (%.02f %s)'|format(attachment.size / 1024, 'kb'|trans) }}
+                    <a href="{{ path('web_download_attachment', { 'id': attachment.id }) }}" target="_blank">{{ attachment.name }}</a>
+                    {{ ' (%.02f %s)'|format(attachment.size / 1024, 'kb'|trans) }}
                 </p>
                 <p class="attachment-time">
                     {% set timestamp = attachment.event.createdAt|localizeddate('medium', 'short', app.user.locale, app.user.timezone) %}
