--- a/app/Resources/views/admin/projects/tab_details.html.twig
+++ b/app/Resources/views/admin/projects/tab_details.html.twig
@@ -2,7 +2,7 @@
 
 <div class="grid-100 grid-row">
     <button type="button" onclick="ProjectsApp.edit({{ project.id }})">{{ 'button.edit'|trans }}</button>
-    {% if can.delete %}
+    {% if is_granted(constant('eTraxis\\Voter\\ProjectVoter::DELETE'), project) %}
         <button type="button" onclick="ProjectsApp.delete({{ project.id }})">{{ 'button.delete'|trans }}</button>
     {% endif %}
 </div>
