--- a/app/Resources/public/less/themes/theme-allblacks.less
+++ b/app/Resources/public/less/themes/theme-allblacks.less
@@ -67,6 +67,7 @@ p a {
     }
 }
 
+.attachment-form,
 .value.huge {
     background-color: #222;
     border: 1px solid #333;
@@ -151,6 +152,12 @@ table.dataTable {
         border-color: #444;
         color: #eeeeee !important;
     }
+}
+
+/* jQuery UI */
+
+.ui-progressbar .ui-progressbar-label {
+    text-shadow: 0 0 1px #000, 0 0 1px #000, 0 0 1px #000, 0 0 1px #000;
 }
 
 /* Panels */
