--- a/app/Resources/public/less/themes/theme-azure.less
+++ b/app/Resources/public/less/themes/theme-azure.less
@@ -46,6 +46,7 @@ p a {
     }
 }
 
+.attachment-form,
 .value.huge {
     background-color: whitesmoke;
     border: 1px solid gainsboro;
@@ -93,6 +94,12 @@ table.dataTable {
             background-color: #fbfbfb;
         }
     }
+}
+
+/* jQuery UI */
+
+.ui-progressbar .ui-progressbar-label {
+    text-shadow: 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb;
 }
 
 /* Panels */
