--- a/app/Resources/public/less/themes/theme-mars.less
+++ b/app/Resources/public/less/themes/theme-mars.less
@@ -46,6 +46,7 @@ p a {
     }
 }
 
+.attachment-form,
 .value.huge {
     background-color: whitesmoke;
     border: 1px solid gainsboro;
@@ -89,6 +90,12 @@ table.dataTable {
         border-color: #303030;
         color: #d0d0d0 !important;
     }
+}
+
+/* jQuery UI */
+
+.ui-progressbar .ui-progressbar-label {
+    text-shadow: 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb;
 }
 
 /* Panels */
