--- a/app/Resources/public/less/themes/theme-nexada.less
+++ b/app/Resources/public/less/themes/theme-nexada.less
@@ -46,6 +46,7 @@ p a {
     }
 }
 
+.attachment-form,
 .value.huge {
     background-color: #fbfbfb;
     border: 1px solid whitesmoke;
@@ -102,6 +103,12 @@ table.dataTable {
             background-color: #5A889A;
         }
     }
+}
+
+/* jQuery UI */
+
+.ui-progressbar .ui-progressbar-label {
+    text-shadow: 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb, 0 0 1px #fbfbfb;
 }
 
 /* Panels */
