--- a/app/Resources/public/less/themes/theme-humanity.less
+++ b/app/Resources/public/less/themes/theme-humanity.less
@@ -46,6 +46,7 @@ p a {
     }
 }
 
+.attachment-form,
 .value.huge {
     background-color: #fffcf8;
     border: 1px solid palegoldenrod;
@@ -89,6 +90,12 @@ table.dataTable {
         border-color: #cdc3b7;
         background-color: #dcd3c3;
     }
+}
+
+/* jQuery UI */
+
+.ui-progressbar .ui-progressbar-label {
+    text-shadow: 0 0 1px #fffcf8, 0 0 1px #fffcf8, 0 0 1px #fffcf8, 0 0 1px #fffcf8;
 }
 
 /* Panels */
