--- a/app/Resources/views/web/records/view.html.twig
+++ b/app/Resources/views/web/records/view.html.twig
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+    <input type="hidden" id="record-id" value="{{ record.id }}">
+
     <div class="grid-100 grid-row">
         <div class="tabs" id="tabs-record" data-tab="{{ tab }}">
             <ul>
