--- a/app/Resources/public/less/etraxis.less
+++ b/app/Resources/public/less/etraxis.less
@@ -7,6 +7,14 @@
 @import "etraxis-panel.less";
 @import "etraxis-unsemantic.less";
 
+form.comment-form {
+
+    textarea {
+        height: 100px;
+        width: 100%;
+    }
+}
+
 p.attachment-name {
     padding: 6px 50px 0 60px;
 }
